--- a/Application/Home/View/Bike/bikeInformationList.html
+++ b/Application/Home/View/Bike/bikeInformationList.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="{$BASEPATH}Public/bootstrap/css/bootstrap.css" />
 		<script type="text/javascript" src="{$BASEPATH}Public/bootstrap/js/jquery-1.9.1.min.js" ></script>
 		<script type="text/javascript" src="{$BASEPATH}Public/bootstrap/js/bootstrap.min.js" ></script>
+		<style type="text/css">
+			#mytable td,th{text-align:center;}
+		</style>
 		<script type="text/javascript">
 			//跳转页面，type=0表示按值跳转，type=1表示向前跳转，type=2表示向后跳转
 			function turnPage(pageNo,pageSize,type=0){
@@ -66,6 +69,7 @@
 				<th>单车是否正在被使用</th>
 				<th>单车车况</th>
 				<th>单车所在位置</th>
+				<th>单车投放位置</th>
 				<th>单车总计行程</th>
 			</tr>
 			<volist name="page.rows" id="m1">
@@ -84,6 +88,7 @@
 						</if>
 					</td>
 					<td>{$m1.bposition}</td>
+					<td>{$m1.pposition}</td>
 					<td>{$m1.ballroute}</td>
 				</tr>
 			</volist>
@@ -101,5 +106,43 @@
                 <li><a href="javascript:void(0);">共<span style="color:red;">{$page.total}</span>条记录</a></li>
            	</ul>
 		</div>
+		<div class="modal fade" tabindex="-1" id="myModal" role="dialog">
+			<div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			    	<div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				        <h4 class="modal-title">增加单车</h4>
+			    	</div>
+			        <form id="myform" method="post" action="{$BASEPATH}index.php/Home/Bike/addOrUpdateHouse">
+				    	<div class="modal-body">
+				    		<input type="hidden" id = "hId" name = "hId" value=""/>
+			            	<br/>
+			            	<div style="width:100%; text-align:center;" class="form-group">
+			            		<label for="hArea">地区：</label>
+			            		<input style="width:30%;" type="text" id="hArea" name="hArea"/>  
+			            		<label for="hDevelop">开发商：</label>
+			            		<input style="width:30%;" type="text" id="hDevelop" name="hDevelop"/>     		
+			            	</div>
+			            	<br/>
+			            	<div style="width:100%; text-align:center;" class="form-group">
+			            		<label for="hPrice">价格：</label>
+			            		<input style="width:30%;" type="text" id="hPrice" name="hPrice"/> 
+			            		<label for="hSort">户型：</label>
+			            		<input style="width:30%;" type="text" id="hSort" name="hSort"/>      		
+			            	</div>
+			            	<br/>
+			            	<div style="width:100%; text-align:center;" class="form-group">
+			            		<label for="hMore">更多详情：</label>
+			            		<textarea id="hMore" name="hMore" style="width:70%;"></textarea>     		
+			            	</div>
+				    	</div>
+				    	<div class="modal-footer">
+					        <button type="submit" class="btn btn-primary">确认</button>
+					        <button type="reset" id="cancel" class="btn btn-default" data-dismiss="modal">取消</button>
+				    	</div>
+				    </form>
+			    </div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
 	</body>
 </html>
