--- a/Application/Home/View/Bike/rentBikeHistory.html
+++ b/Application/Home/View/Bike/rentBikeHistory.html
@@ -15,20 +15,22 @@
 				$("#rbStartPosition").val("{$rbStartPosition}");
 				$("#rbStartTime").val("{$rbStartTime}");
 				$("#uAccount").val("{$uAccount}");
+				$("#rbEndTime").val("{$rbEndTime}");
+				$("#rbEndPosition").val("{$rbEndPosition}");
 			});
 			
 			//跳转页面，type=0表示按值跳转，type=1表示向前跳转，type=2表示向后跳转
 			function turnPage(pageNo,pageSize,type=0){
 				if(type == 2){
-					window.location.href="{$BASEPATH}index.php/Home/Bike/rentBike?pageNo="+(pageNo+1);
+					window.location.href="{$BASEPATH}index.php/Home/Bike/rentBikeHistory?pageNo="+(pageNo+1);
 				}else if(type == 1){
 					if(pageNo == 1){
 						alert("当前已经是第一页了");
 					}else{
-						window.location.href="{$BASEPATH}index.php/Home/Bike/rentBike?pageNo="+(pageNo-1);
+						window.location.href="{$BASEPATH}index.php/Home/Bike/rentBikeHistory?pageNo="+(pageNo-1);
 					}
 				}else{
-					window.location.href="{$BASEPATH}index.php/Home/Bike/rentBike?pageNo="+pageNo;
+					window.location.href="{$BASEPATH}index.php/Home/Bike/rentBikeHistory?pageNo="+pageNo;
 				}
 			}
 			function mark(){
@@ -49,21 +51,26 @@
 	<body>
 		<div style="margin:1%;">
 			<div >
-				<form action = "{$BASEPATH}index.php/Home/Bike/rentBike" method="post">
+				<form action = "{$BASEPATH}index.php/Home/Bike/rentBikeHistory" method="post">
 					<span>快速检索：</span>
 					<span>
 						<label>用户账号:</label>
-	            		<input type="text" style="width:7%" id="uAccount" name = "uAccount"/>
+	            		<input type="text" style="width:5%" id="uAccount" name = "uAccount"/>
 					</span>
 					&nbsp;&nbsp;
 					<span>
 						<label>单车编号:</label>
-	            		<input type="text" style="width:7%" id="bNo" name = "bNo"/>
+	            		<input type="text" style="width:3%" id="bNo" name = "bNo"/>
 					</span>
 					&nbsp;&nbsp;
 					<span>
 						<label>租车开始时间:</label>
-	            		<input type="text" style="width:7%" id="rbStartTime" name = "rbStartTime"/>
+	            		<input type="text" style="width:10%" id="rbStartTime" name = "rbStartTime"/>
+					</span>
+					&nbsp;&nbsp;
+					<span>
+						<label>租车结束时间:</label>
+	            		<input type="text" style="width:10%" id="rbEndTime" name = "rbEndTime"/>
 					</span>
 					&nbsp;&nbsp;
 					<span>
@@ -75,12 +82,21 @@
 							</volist>
 						</select>
 					</span>
+					&nbsp;&nbsp;
+					<span>
+						<label>租车结束平台:</label>
+						<select id="rbEndPosition" name="rbEndPosition">
+							<option value="">请选择租车结束平台</option>
+							<volist name="pPosition" id="p1">
+								<option value="{$p1.pid}">{$p1.pposition}</option>
+							</volist>
+						</select>
+					</span>
 					<input type="submit" value="搜索"/>
 					<input type="reset" value="重置"/>
 				</form>
 			</div>
 			<button type="button" onclick="addOrUpdateHouse(0)" class="btn btn-sm-info"><span class="glyphicon glyphicon-floppy-save"></span>导出Excel</button>
-			<button type="button" onclick="addOrUpdateHouse(1)" class="btn btn-sm-info"><span class="glyphicon glyphicon-saved"></span>结束行程</button>
 		</div>
 		<table id="mytable" class ="table table-hover table-bordered table-striped" style = "width: 98%;margin:1%">
 			<tr>
@@ -88,15 +104,19 @@
 				<th>用户账号</th>
 				<th>单车编号</th>
 				<th>本次租车开始时间</th>
+				<th>本次租车结束时间</th>
 				<th>本次租车开始平台</th>
+				<th>本次租车结束平台</th>
 			</tr>
 			<volist name="page.rows" id="m1">
 				<tr>
-					<td><input type="checkbox" value="{$m1.rbid}"/></td>
+					<td><input type="checkbox" value="{$m1.rrid}"/></td>
 					<td>{$m1.uaccount}</td>
 					<td>{$m1.bno}</td>
 					<td>{$m1.rbstarttime}</td>
+					<td>{$m1.rbendtime}</td>
 					<td>{$m1.pposition}</td>
+					<td>{$m1.endposition}</td>
 				</tr>
 			</volist>
 		</table>
