--- a/Application/Home/View/Finance/rechargeList.html
+++ b/Application/Home/View/Finance/rechargeList.html
@@ -18,15 +18,15 @@
 			//跳转页面，type=0表示按值跳转，type=1表示向前跳转，type=2表示向后跳转
 			function turnPage(pageNo,pageSize,type=0){
 				if(type == 2){
-					window.location.href="{$BASEPATH}index.php/Home/Recharge/rechargeList?pageNo="+(pageNo+1);
+					window.location.href="{$BASEPATH}index.php/Home/Finance/rechargeList?pageNo="+(pageNo+1);
 				}else if(type == 1){
 					if(pageNo == 1){
 						alert("当前已经是第一页了");
 					}else{
-						window.location.href="{$BASEPATH}index.php/Home/Recharge/rechargeList?pageNo="+(pageNo-1);
+						window.location.href="{$BASEPATH}index.php/Home/Finance/rechargeList?pageNo="+(pageNo-1);
 					}
 				}else{
-					window.location.href="{$BASEPATH}index.php/Home/Recharge/rechargeList?pageNo="+pageNo;
+					window.location.href="{$BASEPATH}index.php/Home/Finance/rechargeList?pageNo="+pageNo;
 				}
 			}
 		</script>
@@ -34,7 +34,7 @@
 	<body>
 		<div style="margin:1%;">
 			<div >
-				<form action = "{$BASEPATH}index.php/Home/Recharge/rechargeList" method="post">
+				<form action = "{$BASEPATH}index.php/Home/Finance/rechargeList" method="post">
 					<span>快速检索：</span>
 					<span>
 						<label>用户账号:</label>
@@ -55,9 +55,8 @@
 				</form>
 			</div>
 			<button type="button" onclick="" class="btn btn-sm-info"><span class="glyphicon glyphicon-floppy-save"></span>导出Excel</button>
-		</div>
-		<div>
-			<label>当前总金额：{$sum}</label>
+			<br/>
+			<label>当前已充值总金额：<span style="color:Red;">{$sum}</span></label>
 		</div>
 		<table id="mytable" class ="table table-hover table-bordered table-striped" style = "width: 98%;margin:1%">
 			<tr>
