--- a/Application/Home/View/Finance/rechargeList.html
+++ b/Application/Home/View/Finance/rechargeList.html
@@ -63,7 +63,7 @@
 				<th><input type="checkbox"/>多选框</th>
 				<th>用户账号</th>
 				<th>充值金额</th>
-				<th>本次充值时间</th>
+				<th>充值时间</th>
 			</tr>
 			<volist name="page.rows" id="m1">
 				<tr>
